# git_whleg

./: 99-usb-serial.rules  Environments_Awarness.py  How to use rviz  README.md  Wheel-Leg urdf test  read.md  readme.txt  settings.txt
Legacy/: readme.txt
Legacy/whleg_ws/src/whleg_bringup/: package.xml
Test_code/: readme.txt
Test_code/Legacy/whleg_ws/src/whleg_teleop/: package.xml
Test_code/Legacy/whleg_ws/src/whleg_teleop/whleg_teleop/: whleg_teleop.py
Test_code/mobile_Whleg_ws/src/whleg_bringup/: setup.py
Test_code/mobile_Whleg_ws/src/whleg_env/: package.xml
WheelUrdftest_ws/src/urdf_test/: CMakeLists.txt  package.xml
WheelUrdftest_ws/src/urdf_test/config/: joint_names_urdf.yaml
WheelUrdftest_ws/src/urdf_test/launch/: display.launch.py
WheelUrdftest_ws/src/urdf_test/meshes/: Link_1.STL  base_link.STL
WheelUrdftest_ws/src/urdf_test/urdf/: urdf.csv  urdf.urdf
image_segmentation/: settings.ipynb
image_segmentation/.ipynb_checkpoints/: settings-checkpoint.ipynb
mobile_Whleg_ws/src/whleg_bringup/whleg_bringup/: whleg_bringup.py
mobile_Whleg_ws/src/whleg_env/: setup.cfg  setup.py
mobile_Whleg_ws/src/whleg_env/whleg_env/: settings.txt
openRB150 firmware/: Whleg_OpenRB150.c  re_whleg.c  walk_test.c
openRB150 firmware/Legacy/: 4WD.c  L_Whleg_OpenRB150.c  openRB150 v1.0.ino  openRB150_ 1Po_1Vel_v0.0.ino  openRB150_ two motor _ v1.0.ino
robot/v1.0/: #readme.txt  robot.iam
urdf_test/: CMakeLists.txt  package.xml
urdf_test/launch/: display.launch  gazebo.launch
urdf_test/urdf/: urdf.urdf
whleg_ws/src/whleg_teleop/: setup.cfg  setup.py
(+5 files in other folders)
