<?xml version="1.0"?>
<package format="3">
  <name>urdf_test</name>
  <version>1.0.0</version>
  <description>URDF test robot exported from SolidWorks</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

